--- a/CSS Foundations/CSS excersises (github)/02/ID Selectors.css
+++ b/CSS Foundations/CSS excersises (github)/02/ID Selectors.css
@@ -1,4 +1,5 @@
 #IDselectors {
     background-color: rgb(233, 17, 118);
     font-family: Verdana, DejaVu Sans, sans-serif;
+    font-size: 24px;
 }
