--- a/CSS Foundations/CSS excersises (github)/02/styles.css
+++ b/CSS Foundations/CSS excersises (github)/02/styles.css
@@ -2,3 +2,8 @@
     background-color: rgb(233, 17, 118);
     font-family: Verdana, DejaVu Sans, sans-serif;
 }
+
+#title {
+    color: blue;
+    font-size: 36px;
+}
