--- a/CSS Foundations/CSS excersises (github)/02/styles.css
+++ b/CSS Foundations/CSS excersises (github)/02/styles.css
@@ -7,3 +7,9 @@
     color: blue;
     font-size: 36px;
 }
+
+.cooler {
+    background-color: rgb(233, 17, 118);
+    font-family: Verdana, DejaVu Sans, sans-serif;
+    font-size: 24px;
+}
