--- a/CSS Foundations/CSS excersises (github)/02/styles.css
+++ b/CSS Foundations/CSS excersises (github)/02/styles.css
@@ -13,3 +13,9 @@
     font-family: Verdana, DejaVu Sans, sans-serif;
     font-size: 24px;
 }
+
+#second {
+    background-color: lightgreen;
+    font-family: Verdana, DejaVu Sans, sans-serif;
+    font-size: 24px;
+}
