--- a/CSS Foundations/CSS excersises (github)/02/styles.css
+++ b/CSS Foundations/CSS excersises (github)/02/styles.css
@@ -19,3 +19,8 @@
     font-family: Verdana, DejaVu Sans, sans-serif;
     font-size: 24px;
 }
+
+.pink2 {
+    background-color: rgb(233, 17, 118);
+    font-family: Verdana, DejaVu Sans, sans-serif;
+}
