--- a/CSS Foundations/CSS excersises (github)/03/Grouping.css
+++ b/CSS Foundations/CSS excersises (github)/03/Grouping.css
@@ -1,5 +1,6 @@
 .black {
     background-color: black;
+    color: white;
     font-family: Helvetica, 'Times New Roman', sans-serif;
     font-size: 28px;
 }
