--- a/CSS Foundations/CSS excersises (github)/03/Grouping.css
+++ b/CSS Foundations/CSS excersises (github)/03/Grouping.css
@@ -1,12 +1,14 @@
-.black {
-    background-color: black;
-    color: white;
+.black,
+.yellow {
     font-family: Helvetica, 'Times New Roman', sans-serif;
     font-size: 28px;
 }
 
-#yellow {
+.black {
+    background-color: black;
+    color: white;
+}
+
+.yellow {
     background-color: yellow;
-    font-family: Helvetica, 'Times New Roman', sans-serif;
-    font-size: 28px;
 }
